# Pridebot

./: .env.example  .replit  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codebugtest.py  emojis.py  fun.py  guilds.json  ids.py  main.py  pyproject.toml  replit-deploy.json  requirements.txt  roles.json  utils.py
.github/workflows/: greetings.yml
.github/workflows/ISSUE_TEMPLATE/: Bug_report.md  feature_request.yml
cogs/: fun.py  gifts.py  utils.py
data/: emojis.py  ids.py
info/: emojis.py  ids.py
scripts/: codebugtest.py  keep_alive.py  sentiment_analysis.py  sentiment_analysis_flair.py  sentimentsupport.py
