[tool.poetry]
name = "repl_python3_beta_Pridebot"
version = "0.1.0"
description = ""
authors = ["tyffical <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^2.0.1"
codebug-tether = "^0.9.1"
python-dotenv = "^0.18.0"
discord-py-slash-command = "^2.3.2"
GitPython = "^3.1.30"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


